# vorticity

./: .justfile  Cargo.toml
src/: error.rs  lib.rs  message.rs  rpc.rs
src/rpc/: lin_kv.rs
