[package]
name = "vorticity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vorticity"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.80"
base64 = "0.22.0"
erased-serde = "0.4.4"
miette = { version = "7.2.0", features = ["fancy"] }
raft = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slog = "2.7.0"
sloggers = "2.2.0"
thiserror = "1.0.58"
yrs = "0.18.2"
